--- a/movie_rating_project/template/app_login/signup.html
+++ b/movie_rating_project/template/app_login/signup.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content%}
-
-hello login page 
+<form method="POST">
+{{form.as_p}}
+{% csrf_token %}
+<button type="submit">sign up</button>
+</form>
 
 {% endblock %}
