--- a/movie_rating_project/template/app_login/login.html
+++ b/movie_rating_project/template/app_login/login.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content%}
-
-hello login page 
+<form method="POST">
+    {{form.as_p}}
+    {% csrf_token %}
+    <button type="submit">login</button>
+    </form>
 
 {% endblock %}
