--- a/movie_rating_project/template/app_login/login.html
+++ b/movie_rating_project/template/app_login/login.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content%}
-<form method="POST">
-    {{form.as_p}}
-    {% csrf_token %}
-    <button type="submit">login</button>
-    </form>
-
+<div class="container">
+    <form method="POST">
+        {{form|crispy}}
+        {% csrf_token %}
+        <button type="submit">login</button>
+        </form>
+</div>
 {% endblock %}
