--- a/movie_rating_project/template/base.html
+++ b/movie_rating_project/template/base.html
@@ -28,7 +28,7 @@
           <a class="dropdown-item" href="#">My Blogs</a>
           <a class="dropdown-item" href="#">Your Profile</a>
           <hr>
-          <a class="dropdown-item" href="#">Logout</a>
+          <a class="dropdown-item" href="{% url 'app_login:user_logout' %}">Logout</a>
         </div>
       </div>
       {% else %}
