--- a/movie_rating_project/template/movie/home.html
+++ b/movie_rating_project/template/movie/home.html
@@ -1,4 +1,74 @@
 {% extends 'base.html'%}
+{% load static %}
 {% block title%}{% endblock %}
 {% block content %}
+<div class="m-3">
+    <table class="table table-hover">
+<thead>
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Name</th>
+    <th scope="col">Genre</th>
+    <th scope="col">rating</th>
+    <th scope="col">Release Date</th>
+    <th scope="col">Average Rating</th>
+    
+
+  </tr>
+</thead>
+<tbody>
+{% for movie in all_movies %}
+  <tr>
+    <th scope="row">{{i}}</th>
+    <td>{{movie.name}}</td>
+      <td>{{movie.genre}}</td>
+      <td>{{movie.rating}}</td>
+      <td>{{movie.release_date}}</td>
+      <td>{{movie.average_rating}}</td>
+      <td><a href="{% url 'movie:search_id' movie.id %}">View</a></td>
+      
+  </tr>
+{% endfor %}
+<h5 class="offcanvas-title" id="offcanvasExampleLabel">Add New Movie</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div class = "mb-3">
+      Insert Movie Info
+    </div>
+
+      <form method = "POST", action = "{% url 'movie:add' %}">
+  <div class="input-group mb-3">
+  <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
+  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"name="name">
+</div>
+        <div class = "mb-3">
+        <select class="form-select" aria-label="Default select example" name="genre">
+  <option selected>Select Genre</option>
+          {% for g in genre%}
+  <option value={{g}}>{{g}}</option>
+  {% endfor %}
+</select>
+          </div>
+        <div class = "mb-3">
+        <select class="form-select" aria-label="Default select example" name = "ratings">
+  <option selected>Select Type of Rating</option>
+          {% for r in ratings%}
+  <option value={{r}}>{{r}}</option>
+  {% endfor %}
+</select>
+            </div>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="inputGroup-sizing-default2">Release Date</span>
+  <input placeholder="dd-mm-yyyy" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default2" name="date">
+</div>
+        <div class="input-group mb-3">
+  <span class="input-group-text" id="inputGroup-sizing-default1">Ratting(Out of 5)</span>
+  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default1"name="rate">
+</div>
+
+          <button type="submit" class="btn btn-primary">Add</button>
+</form>
+
+</div>
 {% endblock %}
